--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
-AC_INIT([get2gnow], ["030399"], [http://bugzilla.gnome.org/enter_bug.cgi?product=get2gnow], [get2gnow])
+AC_INIT([get2gnow], ["030401"], [http://bugzilla.gnome.org/enter_bug.cgi?product=get2gnow], [get2gnow])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
 
-PACKAGE_RELEASE="aFF"
+PACKAGE_RELEASE="a01"
 PACKAGE_RELEASE_VERSION="${PACKAGE_VERSION}${PACKAGE_RELEASE}"
 VERSION="${PACKAGE_VERSION}${PACKAGE_RELEASE}"
 
